--- a/index.html
+++ b/index.html
@@ -13,7 +13,61 @@
 <body>
 
     <main>
-        <div class="containerChat"></div>
+        <div class="containerChat">
+            <div class="newMessage received">
+                <div class="containerMessage">
+                    <p>Hola! Como estás??</p>
+                    <small>10:45</small>
+                </div>
+                <div class="containerReactions">
+                    <button class="reaction like">
+                        <img src="assets/images/reactions/like.png">
+                    </button>
+                    <button class="reaction heart">
+                        <img src="assets/images/reactions/heart.png">
+                    </button>
+                    <button class="reaction joy">
+                        <img src="assets/images/reactions/joy.png">
+                    </button>
+                    <button class="reaction shocked">
+                        <img src="assets/images/reactions/shocked.png">
+                    </button>
+                    <button class="reaction sad">
+                        <img src="assets/images/reactions/sad.png">
+                    </button>
+                    <button class="reaction nerd">
+                        <img src="assets/images/reactions/nerd.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="newMessage received">
+                <div class="containerMessage">
+                    <p>Espero que vaya todo genial</p>
+                    <small>10:46</small>
+                </div>
+                <div class="containerReactions">
+                    <button class="reaction like">
+                        <img src="assets/images/reactions/like.png">
+                    </button>
+                    <button class="reaction heart">
+                        <img src="assets/images/reactions/heart.png">
+                    </button>
+                    <button class="reaction joy">
+                        <img src="assets/images/reactions/joy.png">
+                    </button>
+                    <button class="reaction shocked">
+                        <img src="assets/images/reactions/shocked.png">
+                    </button>
+                    <button class="reaction sad">
+                        <img src="assets/images/reactions/sad.png">
+                    </button>
+                    <button class="reaction nerd">
+                        <img src="assets/images/reactions/nerd.png">
+                    </button>
+                </div>
+            </div>
+        </div>
         <form id="formChat">
             <div class="containerField">
                 <button id="emojis">
